--- a/HKTT/files/main_stylesheet.css
+++ b/HKTT/files/main_stylesheet.css
@@ -1,37 +1,3 @@
-
-<html>
-<head>
-  <title>Hong Kong Through Time: Who Is HK Man?</title>
-  <!––required in order to read chinese characters in image filenames--!>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<!––maybe find these files and host locally--!>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script> 
-  <style>
-
-
-
-
-
-@font-face {
-    font-family: 'sears_towerregular';
-    src: url('sears_tower-webfont.woff2') format('woff2'),
-         url('sears_tower-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-} 
-
-
-@font-face {
-    font-family: 'shortcutregular';
-    src: url('shortcut-webfont.woff2') format('woff2'),
-         url('shortcut-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 :root {
   --main-bg-color: #222222;
   --main-txt-color: #f8f8f8;
@@ -63,6 +29,40 @@
   .leaflet-popup-tip {
 		background-color: #222222;
 	}
+
+	
+ /* unvisited link */
+p a:link {
+  color: #bf0101;
+}
+
+/* visited link */
+p a:visited {
+  color: #c10000;
+}
+
+/* mouse over link */
+p a:hover {
+  color: #c10000;
+}
+
+/* selected link */
+p a:active {
+  color: var(--main-accent-color);
+} 
+	
+#myBtn {
+border: none;
+background-color: var(--main-bg-color);
+color: #f00c17;
+margin-top: 3px;
+text-decoration: underline;
+}
+
+#myBtn:hover {
+color: var(--main-text-color)
+}
+	
 	
 html, body {
   height: 100%;
@@ -72,7 +72,7 @@ html, body {
   }
 
 body { 
-  font-family: sans-serif;
+  font-family: helvetica, sans-serif;
   text-align: center;
   margin: 0;}
   
@@ -96,7 +96,6 @@ section {
 	float:left;}
 	
 	.maintitle {
-		font-family: Arial, sans-serif;
 		color: #FFFF;
 		font-size: calc(18px + 0.7vw);
 		text-align: left;
@@ -146,7 +145,15 @@ section {
   display: none;
 }
 
-@media screen and (max-width: 720px) {
+.topnav .lang_icon {
+	height: 20px;
+	margin-left: 5px;
+	float: right;
+	}
+
+
+
+@media screen and (max-width: 835px) {
   .header {width:90%;}
   .topnav a {display: none;}
   .topnav a.icon {
@@ -154,10 +161,11 @@ section {
     display: block;
 	position: fixed;
 	right:0;
+	font-size: 5vh;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 835px) {
   .topnav.responsive {
 	position: fixed;
 	right:0;
@@ -168,18 +176,95 @@ section {
     position: absolute;
     right: 0;
     top: 0;
+	
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+	font-size: 20px;
   }
 }
 	
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 9999; /* Sit on top */
+  padding-top: 3%; /* Location of the box */
+  padding-bottom: 3%;
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #222222;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid var(--main-accent-color);
+  width: 80%;
+  height: 90%;
+  text-align: left;
+  overflow-y: auto;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content h1 {
+color: var(--main-accent-color);
+}
+
+
+input {
+margin-bottom: 8px;
+	}
+
+fieldset {
+width: 250px;
+margin-bottom: 20px;
+margin-top: 20px;
+}
+
+.readonly {
+background-color: #a8a8a8;
+}
+
+legend {
+font-weight: bold;
+}	
 	
-	
-	
+#correctionPhoto img {
+	height: 250px;
+	margin: 10px, 0, 10px, 20px;
+}
+
+#correctionMap { height: 180px; }
+
+#submitButton {
+	font-size: 20px;
+	margin-bottom: 30px;
+	margin-left: 5px;
+	}
 
 article {
   position: relative;
@@ -205,6 +290,20 @@ top: 45%;
 transform: translateY(-50%);
 }
 
+
+#introText {
+	max-height: 80%;
+	overflow-y: auto;
+	width: 100%;
+	}
+
+#introText p {
+	margin-left: 5vw;
+	margin-right: 5vw;
+	text-align: justify;
+	}
+
+	
 
 .right-half {
   float: left;
@@ -246,12 +345,11 @@ transform: translateY(-50%);
   margin: 4px 2px;
   cursor: pointer;
   min-width: 20%;
-  visibility:hidden;
 }
 
-#random {
-	visibility:visible;
-	} 
+.hiddenbutton {
+	visibility:hidden;
+}
 
 	
 @media screen and (max-width: 720px) {
@@ -279,70 +377,3 @@ transform: translateY(-50%);
 	#map {
 	border-left: none;
 }
-}
-
-p {
-margin: 20px 25%;
-text-align: left;
-}
-
-@media screen and (max-width: 720px) {
-p {
-margin: 20px 10%;
-}
-
-  </style>
-</head>
-
-<body>
-    	<div class="header">
-		<div class="title">
-		<h1 class="maintitle">Hong Kong <span style="color:var(--main-accent-color)">Through Time:</span></h1>
-			</div>
-		<div class="topnav" id="myTopnav">
-			  <a href="HKTT_main.html">Home</a>
-			  <a href="top_20_images.html" class="active">Top 20 images</a>
-			  <a href="Who_is_HK_Man.html">Who is HK Man?</a>
-			  <a href="About_Contact.html">About and Contact</a>
-			  <a href="javascript:void(0);" class="icon" onclick="showNavMenu()">
-				<i class="fa fa-bars"></i>
-			  </a>
-			</div>
-		<div class="sub-title">The then and now photography of HK Man
-			</div>
-		</div>
-<section class="container">
-
-<h2> Who is <span style="color:var(--main-accent-color)">HK Man</span>?</h2>
-
-<p>I don't know! Do you?</p>
-<p>HK Man is a <a href="https://www.flickr.com/photos/old-hk/">Flickr user</a> who built this collection of then-and-now photographs. The earliest photograph in the collection is dated January 2007, and the last October 2011. His account is no longer in use, and efforts to contact him through Flickr and an email address listed in his profile have failed.</p>
-
-<p>These images form a valuable record of architectural change in Hong Kong. My hope is that in a few decades time someone repeats these photographs for a third time and adds them to the collection.</p>
-
-<p>I would love to get in touch with HK Man, to talk about his project and methodology behind it. If you know who he might be, or if you yourself are HK Man, please contact me.</p>
-
-
-
-</section>
-
-
-  <script>
-
-
-  
-function showNavMenu() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-
- 
- 
-  </script>
-</body>
-</html>
-	
