Lots of tweaks and edits

--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -1,4 +1,8 @@
 /* The Modal (background) */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,900&display=swap');
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -43,7 +47,7 @@
 .closeModal {
     color: white;
     float: right;
-	font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif; font-size: 2vh; font-style: italic; font-variant: normal; font-weight: 700; 
+	font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 2vh; font-style: italic; font-variant: normal; font-weight: 900; 
 	margin: 5px;
 	cursor: pointer;
 }
@@ -73,6 +77,8 @@
 		margin: 0 auto 0 auto;	
 		}
 	body {background-color: #b33234;}
+	
+	path {cursor: pointer;}
 	
 	*, *:before, *:after {
 	box-sizing: border-box;
@@ -110,7 +116,7 @@ font-family: 'Roboto', sans-serif;
 }
    
 #titleText {
-font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif; font-size: 4.5vh; font-style: italic; font-variant: normal; font-weight: 700; line-height: 1;margin:2vh auto 2vh auto; text-align: center;
+font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 4.5vh; font-style: italic; font-variant: normal; font-weight: 900; line-height: 1;margin:2vh auto 2vh auto; text-align: center;
 
 }   
 
@@ -121,11 +127,11 @@ position: absolute;
 }   
 
 .captionText {
-  font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif; font-size: 3vh; font-style: italic; font-variant: normal; font-weight: 700;
+  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 3vh; font-style: italic; font-variant: normal; font-weight: 900;
   }
 
 .subTitles{
-  font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif; font-size: 2.5vh; font-style: italic; font-variant: normal; font-weight: 700; text-align:center;
+  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif;  font-size: 2.5vh; font-style: italic; font-variant: normal; font-weight: 900; text-align:center;
   }
 
 	
@@ -162,12 +168,12 @@ position: absolute;
   right: 50%;
   color: white;
   font-style: italic;
-  font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif;
+  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; 
   max-width: 250px
 }
 
 .mobLink {
-font-family: Arial Black, 'OPTIAlpine-BoldItalic', Arial Bold, Gadget, sans-serif; font-size: 1em; font-variant: normal; font-weight: 700; color:#b33234;text-decoration: underline;
+font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 1em; font-variant: normal; font-weight: 900; color:#b33234;text-decoration: underline;
 }
 
 .moblinkHightlight {
@@ -226,17 +232,6 @@ margin: 5px auto 5px auto
     #subHead {left:14vw;}
 }​
 
-path {cursor: pointer;}
-
-@font-face {
-    font-family: 'OPTIAlpine-BoldItalic';
-    src:url('OPTIAlpine-BoldItalic.woff') format('woff'),
-        url('OPTIAlpine-BoldItalic.woff2') format('woff2'),
-        url('OPTIAlpine-BoldItalic.eot'),
-        url('OPTIAlpine-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('OPTIAlpine-BoldItalic.otf') format('truetype');
-
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+.testC {
+	background-color: blue;
 }
