--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -3,8 +3,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,900&display=swap');
 
-html, body{min-height:100%;}
-body{height:100vh;}
+/*html, body{min-height:100%;}
+body{height:100vh;}*/
+
+body, html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+.full-screen-div {
+    width: 100vw;
+    height: 100%;
+    min-height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 
 .modal {
     display: none; /* Hidden by default */
