--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -7,7 +7,7 @@
 body{height:100vh;}*/
 
 body, html {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
      padding:0; /* remove default padding */
@@ -21,21 +21,21 @@ body, html {
                 background-color: red;
                 position: absolute;
                 width: 100% /* BenM mentioned this in answer*/
-                height: 100%; /* take full browser height */
+                height: 100vh; /* take full browser height */
                 left: 0;
                 top: 0;
             }
 			
 			  .screen .main {
                 width: 100%; /* <--now this takes full browser dimension  */
-                height: 100%; /* <--now this takes full browser dimension  */
+                height: 100vh; /* <--now this takes full browser dimension  */
             }
 			
 			
 .full-screen-div {
     width: 100vw;
     height: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: hidden;
