--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -6,40 +6,22 @@
 /*html, body{min-height:100%;}
 body{height:100vh;}*/
 
+.my-element {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 body, html {
-  height: 100vh;
+	height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   margin: 0;
      padding:0; /* remove default padding */
 }
 
 
-
-			  .screen {
-                font-size: 0.5em;
-                margin: 0;
-                background-color: red;
-                position: absolute;
-                width: 100% /* BenM mentioned this in answer*/
-                height: 100vh; /* take full browser height */
-                left: 0;
-                top: 0;
-            }
-			
-			  .screen .main {
-                width: 100%; /* <--now this takes full browser dimension  */
-                height: 100vh; /* <--now this takes full browser dimension  */
-            }
 			
 			
-.full-screen-div {
-    width: 100vw;
-    height: 100%;
-    min-height: 100vh;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
 
 
 .modal {
