--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -6,10 +6,6 @@
 /*html, body{min-height:100%;}
 body{height:100vh;}*/
 
-.my-element {
-  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
-}
 
 body, html {
 	height: 100vh;
@@ -17,6 +13,10 @@ body, html {
   width: 100%;
   margin: 0;
      padding:0; /* remove default padding */
+}
+
+.container {
+	height: 100%;
 }
 
 
@@ -94,7 +94,7 @@ body, html {
     color: white;
 }
 	
-	#map {height: 82vh;
+	#map {height: 100%;
 		margin: 0 auto 0 auto;	
 		}
 	body {background-color: #b33234;}
@@ -143,7 +143,7 @@ font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 4
 
 #district-name {
 position: absolute;
-  bottom: 19vh;
+  bottom: 19%;
   left: 25%;
 }   
 
@@ -170,7 +170,7 @@ background-color: white;
 width: 100%;
   padding: 10px;
   box-shadow: 5px 5px;
-  max-height: 80vh;
+  max-height: 80%;
   overflow:auto;
 }
 
@@ -233,7 +233,7 @@ margin: 5px auto 5px auto
 
 
 @media screen and (min-width: 992px) {
-    #map {height:90vh}
+    #map {height:90%}
 	.container {
     max-width: 1100px;}
 
