--- a/MyanmarResists/myanRes.css
+++ b/MyanmarResists/myanRes.css
@@ -28,7 +28,7 @@ body, html {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 20%; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
